move swagger-ui into api backend
